# int11_FP

./: .env.example  .gitignore  README.md  dag.py  docker-compose.yml  main.py  pyproject.toml
dags/: dag.py
src/: logging_config.py  s3_utils.py  utils.py  yara_scanner.py
